Take Pete's and Sam's suggestions.

--- a/index.html
+++ b/index.html
@@ -1626,12 +1626,12 @@ In any rare instances when an API must be defined as returning true current valu
 configure their agents to respond with other information, for reasons including testing, auditing or
 mitigating forms of data collection, including <a>browser fingerprinting</a>. In some cases, sites
 do not abide by data minimisation principles and request more information than they require. This
-principle supports [=people=] in defending under such cases.
+principle supports [=people=] in defending against that behavior.
 
 Sites should include deception in their threat modeling and not assume that Web platform APIs
 provide any guarantees of consistency, currency or correctness about the user. People often have
 control of the devices and software they use to interact with web sites. In response to site
-requests, people may provide information that may be deceptive for a variety of reasons, including
+requests, people may people may arbitrarily modify or select the information they provide for a variety of reasons, including
 both malice and self-protection.
 
 Examples of ways in which a [=user agent=] may support this principle include:
