Improve obscurity text

--- a/index.html
+++ b/index.html
@@ -1609,9 +1609,8 @@ site might only allow searches in my current location.
 
 [=User agents=] should make it simple for [=people=] to [present the identity they wish
 to](#principle-identity-per-context) and to provide information about themselves or their devices in
-ways that they control. This empowers [=people=] to live in obscurity ([[?Lost-In-Crowd]],
-[[?Obscurity-By-Design]]) by rendering the provision of information according to their own
-preferences as easy as possible ([[?Obfuscation]]).
+ways that they control. This helps [=people=] to live in obscurity ([[?Lost-In-Crowd]],
+[[?Obscurity-By-Design]]), including by obfuscating information about themselves ([[?Obfuscation]]).
 
 <div class="practice">
   <span class="practicelab" id="principle-no-facts-or-promises">
