Take Pete's suggestion.

--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,7 @@ scratch, without relying on the existing API.
 1. If an existing browser does block access to the undesirable information, perhaps by
    breaking some experiences on the Web that other browsers don't wish to break, it should
    be clear how the more-private browser can also prevent the new API from exposing that
-   information.
+   information without breaking additional sites or user experiences.
 
 1. A new API should be harder to use to discover undesirable information than the existing
    APIs, for example by requiring more code, more maintenance, and/or more runtime cost.
