Editorial updates based on PR feedback
Co-authored-by: Jeffrey Yasskin <jyasskin@gmail.com>

--- a/index.html
+++ b/index.html
@@ -922,9 +922,11 @@ site.
 
 A [=person=]'s <dfn>identity</dfn> is the set of characteristics that define
 them. Their identity *in a [=context=]* is the set of characteristics they
-present in that context. People frequently present different identities to
-different contexts, and also frequently share an identity among several
-contexts.
+present to that context, or that the context can infer.  This set of
+characteristics can be intentionally small and can differ from the person's
+physical-world characteristics or [=identifiers=]. People frequently present
+different identities to different contexts, and also frequently share an
+identity among several contexts.
 
 <dfn>Cross-context recognition</dfn> is the act of recognising that an
 [=identity=] in one [=context=] is the same [=person=] as an [=identity=] in
