First draft of audiences section

--- a/index.html
+++ b/index.html
@@ -426,6 +426,39 @@ understanding is that the law is a floor, not a ceiling.
 
 </section>
 
+<section class="introductory">
+
+## Audience for this Document
+
+The primary audiences for this document are
+
+ * browser developers
+
+ * authors of W3C specifications
+
+ * reviewers of W3C specifications
+
+Other audiences include
+
+ * web developers
+
+ * policy makers
+
+ * operators of privacy-related services
+
+This document is intended to help its audiences address privacy concerns as early as possible in the life
+cycle of a new Web standard or feature.  Beginning with privacy in mind will help avoid the need to 
+add special cases to comply with specific requirements one law or one jurisdiction at a time, later, or
+to build systems that turn out to be unacceptable to users.
+
+Although one intended use for this document is to help guide privacy reviews
+of new standards once proposed, this document should be able to be used productively early in the design
+process, to help remind developers and specification authors of principles that best reflect our current
+research-driven understanding of privacy.
+
+</section>
+
+
 # An Introduction to Privacy on the Web {#intro}
 
 The Web is for everyone ([[?For-Everyone]]). It is "<i>a platform that helps people and provides a
