--- a/index.html
+++ b/index.html
@@ -239,6 +239,17 @@
           href: 'https://www.oecd.org/sti/ieconomy/oecdguidelinesontheprotectionofprivacyandtransborderflowsofpersonaldata.htm',
           publisher: 'OECD',
         },
+        'PEN-Harassment': {
+          href: 'https://onlineharassmentfieldmanual.pen.org/defining-online-harassment-a-glossary-of-terms/',
+          title: 'Online Harassment Field Manual',
+          publisher: 'PEN America',
+        },
+        'PEW-Harassment': {
+          title: 'The State of Online Harassment',
+          publisher: 'Pew Research Center',
+          date: 'January 2021',
+          href: 'https://www.pewresearch.org/internet/2021/01/13/the-state-of-online-harassment/'
+        },
         'Phone-On-Feminism': {
           title: 'This is your phone on feminism',
           href: 'https://conversationalist.org/2019/09/13/feminism-explains-our-toxic-relationships-with-our-smartphones/',
@@ -1430,9 +1441,48 @@ improved privacy.
 
 ## Harassment
 
-<aside class="issue">
-  This section has not been written.
-</aside>
+Online <dfn>harassment</dfn> is the "pervasive or severe targeting of an individual or group online
+through harmful behavior" [[PEN-Harassment]]. Harassment is a prevalent problem on the Web,
+particularly via social media. Harassment may be more severe and its consequences more impactful for
+LGBTQ people and women [[?PEW-Harassment]].
+
+<a>Harassment</a> is both a violation of privacy itself and can be a consequence of other violations
+of privacy. 
+
+Abusive online behavior may include: sending <a href="#unwanted-information">unwanted
+information</a>; directing others to contact or bother a person ("dogpiling"); disclosing sensitive
+information about a person; posting false information about a person; impersonating a person;
+insults; threats; and hateful or demeaning speech.
+
+Disclosure of contact information can be used, including by a separate attacker, to send often
+persistent unwanted information that amounts to harassment. Disclosure of location information can
+be used, including by a separate attacker, to intrude on a person's physical safety or space.
+
+Mitigations for harassment include but extend beyond mitigations for unwanted information and other
+privacy principles. Harassment can include harmful activity not solely directly communicated to the
+target of harassment.
+
+<div class="practice">
+  <p>
+    <span class="practicelab" id="abuse-reporting">
+      Systems that allow for communicating on the Web must provide an effective capability to report
+      abuse.
+    </span>
+  </p>
+</div>
+
+Reporting mechanisms are mitigations, but may not prevent harassment, particularly in cases where
+hosts or intermediaries are supportive of or complicit in the abuse.
+
+
+<div class="note">
+  Effective reporting is likely to require:
+
+  * standardized mechanisms to identify abuse reporting contacts * visible, usable ways provided by
+  sites and user agents to report abuse * identifiers to refer to senders and content * the ability
+  to provide context and explanation of harms * people responsible for promptly responding to
+  reports * tools for pooling mitigation information (see Unwanted information, below)  
+</div>
 
 ## Unwanted Information {#unwanted-information}
 
