formatting and wording changes per @darobin

--- a/index.html
+++ b/index.html
@@ -1446,17 +1446,18 @@ through harmful behavior" [[PEN-Harassment]]. Harassment is a prevalent problem 
 particularly via social media. Harassment may be more severe and its consequences more impactful for
 LGBTQ people and women [[?PEW-Harassment]].
 
-<a>Harassment</a> is both a violation of privacy itself and can be a consequence of other violations
-of privacy. 
+[=Harassment=] is both a violation of privacy itself and can be magnified or facilitated by other
+violations of privacy. 
 
-Abusive online behavior may include: sending <a href="#unwanted-information">unwanted
-information</a>; directing others to contact or bother a person ("dogpiling"); disclosing sensitive
-information about a person; posting false information about a person; impersonating a person;
-insults; threats; and hateful or demeaning speech.
+Abusive online behavior may include: sending [=unwanted information=]; directing others to contact
+or bother a person ("dogpiling"); disclosing sensitive information about a person; posting false
+information about a person; impersonating a person; insults; threats; and hateful or demeaning
+speech.
 
-Disclosure of contact information can be used, including by a separate attacker, to send often
-persistent unwanted information that amounts to harassment. Disclosure of location information can
-be used, including by a separate attacker, to intrude on a person's physical safety or space.
+Disclosure of identifying or contact information (including "doxxing") can be used, including by a
+separate attacker, to send often persistent unwanted information that amounts to harassment.
+Disclosure of location information can be used, including by a separate attacker, to intrude on a
+person's physical safety or space.
 
 Mitigations for harassment include but extend beyond mitigations for unwanted information and other
 privacy principles. Harassment can include harmful activity not solely directly communicated to the
@@ -1474,14 +1475,15 @@ target of harassment.
 Reporting mechanisms are mitigations, but may not prevent harassment, particularly in cases where
 hosts or intermediaries are supportive of or complicit in the abuse.
 
-
 <div class="note">
   Effective reporting is likely to require:
 
-  * standardized mechanisms to identify abuse reporting contacts * visible, usable ways provided by
-  sites and user agents to report abuse * identifiers to refer to senders and content * the ability
-  to provide context and explanation of harms * people responsible for promptly responding to
-  reports * tools for pooling mitigation information (see Unwanted information, below)  
+  * standardized mechanisms to identify abuse reporting contacts 
+  * visible, usable ways provided by sites and user agents to report abuse 
+  * identifiers to refer to senders and content 
+  * the ability to provide context and explanation of harms 
+  * people responsible for promptly responding to reports 
+  * tools for pooling mitigation information (see Unwanted information, below)  
 </div>
 
 ## Unwanted Information {#unwanted-information}
@@ -1501,10 +1503,10 @@ time or resources is a violation of privacy.
 </p>
 </div>
 
-Unwanted information covers a broad range of unsolicited communication, from messages that are
-typically harmless individually but that become a nuisance in aggregate (spam) to the sending of
-images that will cause shock or disgust due to their graphic, violent, or explicit nature (eg.
-pictures of one's genitals). While it is impossible, in a communication system involving many
+<dfn>Unwanted information</dfn> covers a broad range of unsolicited communication, from messages
+that are typically harmless individually but that become a nuisance in aggregate (spam) to the
+sending of images that will cause shock or disgust due to their graphic, violent, or explicit nature
+(eg. pictures of one's genitals). While it is impossible, in a communication system involving many
 [=people=], to offer perfect protection against all kinds of unwanted information, steps can be
 taken to make the sending of such messages more difficult or more costly, and to render the senders
 more accountable. Examples of mitigations include:
