--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ understanding is that the law is a floor, not a ceiling.
 
 The primary audiences for this document are
 
- * browser developers
+ * browser developers,
 
  * authors of W3C specifications
 
