--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ The primary audiences for this document are
 
  * browser developers,
 
- * authors of W3C specifications
+ * authors of W3C specifications, and
 
  * reviewers of W3C specifications
 
