--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ The primary audiences for this document are
 
  * authors of W3C specifications, and
 
- * reviewers of W3C specifications
+ * reviewers of W3C specifications.
 
 Other audiences include
 
