--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ The primary audiences for this document are
 
  * reviewers of W3C specifications.
 
-Other audiences include
+Other audiences include:
 
  * web developers
 
