--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ The primary audiences for this document are
 
 Other audiences include:
 
- * web developers
+ * web developers,
 
  * policy makers
 
