--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ Other audiences include:
 
  * web developers,
 
- * policy makers
+ * policy makers, and
 
  * operators of privacy-related services
 
