--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ Other audiences include:
 
  * policy makers, and
 
- * operators of privacy-related services
+ * operators of privacy-related services.
 
 This document is intended to help its audiences address privacy concerns as early as possible in the life
 cycle of a new Web standard or feature.  Beginning with privacy in mind will help avoid the need to 
