--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ Other audiences include:
  * operators of privacy-related services.
 
 This document is intended to help its audiences address privacy concerns as early as possible in the life
-cycle of a new Web standard or feature.  Beginning with privacy in mind will help avoid the need to 
+cycle of a new Web standard or feature, or in the development of Web products.  Beginning with privacy in mind will help avoid the need to 
 add special cases to comply with specific requirements one law or one jurisdiction at a time, later, or
 to build systems that turn out to be unacceptable to users.
 
