--- a/index.html
+++ b/index.html
@@ -451,10 +451,7 @@ cycle of a new Web standard or feature, or in the development of Web products.  
 add special cases to comply with specific requirements one law or one jurisdiction at a time, later, or
 to build systems that turn out to be unacceptable to users.
 
-Although one intended use for this document is to help guide privacy reviews
-of new standards once proposed, this document should be able to be used productively early in the design
-process, to help remind developers and specification authors of principles that best reflect our current
-research-driven understanding of privacy.
+Because this document guides privacy reviews of new standards, designers should consult it early in the design to make sure their feature passes the review smoothly.
 
 </section>
 
