change w3c specs to web specs

--- a/index.html
+++ b/index.html
@@ -434,9 +434,9 @@ The primary audiences for this document are
 
  * browser developers,
 
- * authors of W3C specifications, and
+ * authors of web specifications, and
 
- * reviewers of W3C specifications.
+ * reviewers of web specifications.
 
 Other audiences include:
 
