move web developers to primary audience list

--- a/index.html
+++ b/index.html
@@ -433,17 +433,13 @@ understanding is that the law is a floor, not a ceiling.
 The primary audiences for this document are
 
  * browser developers,
-
- * authors of web specifications, and
-
- * reviewers of web specifications.
+ * authors of web specifications, 
+ * reviewers of web specifications, and
+ * web developers
 
 Other audiences include:
 
- * web developers,
-
  * policy makers, and
-
  * operators of privacy-related services.
 
 This document is intended to help its audiences address privacy concerns as early as possible in the life
