First draft of audiences section (#193)
* First draft of audiences section

* punctuation fix

Co-authored-by: Robin Berjon <robin@berjon.com>

* punctuation fix

Co-authored-by: Robin Berjon <robin@berjon.com>

* punctuation fix

Co-authored-by: Robin Berjon <robin@berjon.com>

* punctuation fix

Co-authored-by: Robin Berjon <robin@berjon.com>

* punctuation fix

Co-authored-by: Robin Berjon <robin@berjon.com>

* punctuation fix

Co-authored-by: Robin Berjon <robin@berjon.com>

* punctuation fix

Co-authored-by: Robin Berjon <robin@berjon.com>

* Fix wording

Co-authored-by: Robin Berjon <robin@berjon.com>

* Simplify wording

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

* change w3c specs to web specs

* move web developers to primary audience list

Co-authored-by: Robin Berjon <robin@berjon.com>
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -426,6 +426,32 @@ understanding is that the law is a floor, not a ceiling.
 
 </section>
 
+<section class="introductory">
+
+## Audience for this Document
+
+The primary audiences for this document are
+
+ * browser developers,
+ * authors of web specifications, 
+ * reviewers of web specifications, and
+ * web developers
+
+Other audiences include:
+
+ * policy makers, and
+ * operators of privacy-related services.
+
+This document is intended to help its audiences address privacy concerns as early as possible in the life
+cycle of a new Web standard or feature, or in the development of Web products.  Beginning with privacy in mind will help avoid the need to 
+add special cases to comply with specific requirements one law or one jurisdiction at a time, later, or
+to build systems that turn out to be unacceptable to users.
+
+Because this document guides privacy reviews of new standards, designers should consult it early in the design to make sure their feature passes the review smoothly.
+
+</section>
+
+
 # An Introduction to Privacy on the Web {#intro}
 
 The Web is for everyone ([[?For-Everyone]]). It is "<i>a platform that helps people and provides a
