Tweaks before merging
Co-authored-by: Robin Berjon <robin@berjon.com>

--- a/index.html
+++ b/index.html
@@ -1504,6 +1504,8 @@ more accountable. Examples of mitigations include:
 
 ## Vulnerability {#vulnerability}
 
+<div class="issue">This section is still being refined. We expect additional principles to be added.</div>
+
 An individual may not realise when they disclose personal data that
 they are vulnerable or could become vulnerable. Some individuals
 may be more vulnerable to privacy risks or harm as a result of
@@ -1518,7 +1520,7 @@ consulted about their privacy needs and expectations, or considered
 in the decisions about the design of the product of service.
 
 Sometimes communities of individuals are classed as “vulnerable”,
-typically children and the elderly, but anyone could be privacy
+typically children and the elderly, but anyone could become privacy
 vulnerable in a given context. Additional privacy protections may
 be needed for personal data of vulnerable individuals or sensitive
 information which could cause someone to become vulnerable if their
