--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@ A [=person=]'s <dfn>identity</dfn> is the set of characteristics that define
 them. Their identity *in a [=context=]* is the set of characteristics they
 present in that context. People frequently present different identities to
 different contexts, and also frequently share an identity among several
-contexts.
+contexts. People may also wish to present an ephemeral or anonymous identity.
 
 <dfn>Cross-context recognition</dfn> is the act of recognising that an
 [=identity=] in one [=context=] is the same [=person=] as an [=identity=] in
