Add ephemeral or anonymous identity (#199)
SHA: 2d0e3e335a2bd64e3c7d091e9cdd0135db6278fd
Reason: push, by darobin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,7 @@ site.</p>
 them. Their identity <em>in a <a data-link-type="dfn" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-10">context</a></em> is the set of characteristics they
 present in that context. People frequently present different identities to
 different contexts, and also frequently share an identity among several
-contexts.</p>
+contexts. People may also wish to present an ephemeral or anonymous identity.</p>
 <p><dfn id="dfn-cross-context-recognition" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">Cross-context recognition</dfn> is the act of recognising that an
 <a data-link-type="dfn" href="#dfn-identity" class="internalDFN" id="ref-for-dfn-identity-3">identity</a> in one <a data-link-type="dfn" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-11">context</a> is the same <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-54">person</a> as an <a data-link-type="dfn" href="#dfn-identity" class="internalDFN" id="ref-for-dfn-identity-4">identity</a> in
 another <a data-link-type="dfn" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-12">context</a>. This contributes to <a data-link-type="dfn" href="#dfn-surveillance" class="internalDFN" id="ref-for-dfn-surveillance-3">surveillance</a>, <a data-link-type="dfn" href="#dfn-correlation" class="internalDFN" id="ref-for-dfn-correlation-2">correlation</a>,
