--- a/index.html
+++ b/index.html
@@ -1636,6 +1636,23 @@ Historically, the Web has provided exactly this escape route, and [=user agents=
 that feature by correctly balancing a benevolent [=guardian=]'s need to protect their [=ward=] from
 dangers against other [=wards=]' need to protect themselves from their dangerous [=guardians=].
 
+<aside class="example" id="example-protective-parent" title="Protective parents">
+
+A parent might configure a small child's [=user agent=] to block access to violent content until the
+child is old enough to make their own decisions about it.
+
+</aside>
+
+<aside class="example" id="example-lgbt-kid" title="An LGBT child">
+
+A child may discover that they're LGBT and need to find supportive resources online. If they have a
+homophobic or transphobic parent, that parent might have configured their [=user agent=] to either
+block or inform the parent when the child visits pro-LGBT websites. The [=user agent=] needs to warn
+the child about how it's configured so that the child can know to ask a better [=guardian=] for
+access to the help they need.
+
+</aside>
+
 <aside class="issue">
 
 Add crosslinks to the <a href="https://github.com/w3ctag/privacy-principles/pull/202">upcoming
