And an example on how employees can be seen as wards.

--- a/index.html
+++ b/index.html
@@ -1653,6 +1653,18 @@ access to the help they need.
 
 </aside>
 
+<aside class="example" id="example-it-as-guardians" title="IT departments as guardians">
+
+An employee of a large company can be a tempting target for malware, but most employees don't have
+the time or expertise to be aware of all of the latest threats. Their IT department can invest in
+scalable defences, which they then apply by configuring the [=user agents=] they manage.
+
+However, employees still need to be able to organize into unions and blow the whistle on illegal
+activity by their employers, without getting caught by undesired aspects of their IT departments'
+surveillance.
+
+</aside>
+
 <aside class="issue">
 
 Add crosslinks to the <a href="https://github.com/w3ctag/privacy-principles/pull/202">upcoming
