--- a/index.html
+++ b/index.html
@@ -1443,8 +1443,14 @@ improved privacy.
 
 Online <dfn>harassment</dfn> is the "pervasive or severe targeting of an individual or group online
 through harmful behavior" [[PEN-Harassment]]. Harassment is a prevalent problem on the Web,
-particularly via social media. Harassment may be more severe and its consequences more impactful for
-LGBTQ people and women [[?PEW-Harassment]].
+particularly via social media. While harassment may affect any person using the Web, it may be more
+severe and its consequences more impactful for LGBTQ people, women, people in racial or ethnic
+minorities, people with disabilities, [=vulnerable people=] and other marginalized groups.
+
+<aside class="note">
+  Some useful research overviews of online harassment include: [[?PEW-Harassment]],
+  [[?Addressing-Cyber-Harassment]] and [[?Internet-of-Garbage]].
+</aside>
 
 [=Harassment=] is both a violation of privacy itself and can be magnified or facilitated by other
 violations of privacy. 
@@ -1454,13 +1460,13 @@ or bother a person ("dogpiling"); disclosing sensitive information about a perso
 information about a person; impersonating a person; insults; threats; and hateful or demeaning
 speech.
 
-Disclosure of identifying or contact information (including "doxxing") can be used, including by a
-separate attacker, to send often persistent unwanted information that amounts to harassment.
-Disclosure of location information can be used, including by a separate attacker, to intrude on a
+Disclosure of identifying or contact information (including "doxxing") can be used, including by
+additional attackers, to send often persistent unwanted information that amounts to harassment.
+Disclosure of location information can be used, including by additional attackers, to intrude on a
 person's physical safety or space.
 
 Mitigations for harassment include but extend beyond mitigations for unwanted information and other
-privacy principles. Harassment can include harmful activity not solely directly communicated to the
+privacy principles. Harassment can include harmful activity with a wider distribution than just the
 target of harassment.
 
 <div class="practice">
