--- a/index.html
+++ b/index.html
@@ -1618,11 +1618,19 @@ installed software or connected devices).
 
 ### Guardians {#guardians}
 
+<div class="practice">
+<span class="practicelab" id="principle-guardians-have-responsibilities">
+A [=user agent=] may only provide information about a [=ward=] to a [=guardian=] for the purpose of
+helping that [=guardian=] uphold their responsibilities to their [=ward=]. This system must include
+measures to help [=wards=] who realize that their [=guardian=] isn't acting in the [=ward=]'s
+interest.</span>
+</div>
+
+
 Some classes of vulnerable people tend to be unable to make good decisions about their own web use,
 and need a <dfn>guardian</dfn> to help them. Children are a widely recognized example of this class,
-with their parents commonly acting as their [=guardians=].  A person with a [=guardian=] is known as
-a <dfn>ward</dfn>. In some limited ways, employees with valuable access to systems can be seen as
-[=wards=] of their IT departments.
+with their parents often acting as their [=guardians=]. A person with a [=guardian=] is known as
+a <dfn>ward</dfn>.
 
 Many legal systems treat these guardianship relationships as a set of rights that the [=guardian=]
 possesses. We prefer to instead think of the [=ward=] having a right to make informed decisions and
@@ -1634,7 +1642,7 @@ misbehaving guardian.
 
 Historically, the Web has provided exactly this escape route, and [=user agents=] should preserve
 that feature by correctly balancing a benevolent [=guardian=]'s need to protect their [=ward=] from
-dangers against other [=wards=]' need to protect themselves from their dangerous [=guardians=].
+dangers against other [=wards=]' need to protect themselves from their misbehaving [=guardians=].
 
 <aside class="example" id="example-protective-parent" title="Protective parents">
 
@@ -1650,18 +1658,6 @@ homophobic or transphobic parent, that parent might have configured their [=user
 block or inform the parent when the child visits pro-LGBT websites. The [=user agent=] needs to warn
 the child about how it's configured so that the child can know to ask a better [=guardian=] for
 access to the help they need.
-
-</aside>
-
-<aside class="example" id="example-it-as-guardians" title="IT departments as guardians">
-
-An employee of a large company can be a tempting target for malware, but most employees don't have
-the time or expertise to be aware of all of the latest threats. Their IT department can invest in
-scalable defences, which they then apply by configuring the [=user agents=] they manage.
-
-However, employees still need to be able to organize into unions and blow the whistle on illegal
-activity by their employers, without getting caught by undesired aspects of their IT departments'
-surveillance.
 
 </aside>
 
