--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         },
         'Browser-Parties': {
           title: 'Parties and browsers',
-          href: 'https://tess.oconnor.cx/2020/10/parties#environment-cross-site',
+          href: 'https://tess.oconnor.cx/2020/10/parties',
           authors: ["Tess O'Connor"],
         },
         'CAT': {
