--- a/index.html
+++ b/index.html
@@ -960,7 +960,9 @@ A [=person=]'s <dfn>identity</dfn> is the set of characteristics that define
 them. Their identity *in a [=context=]* is the set of characteristics they
 present in that context. People frequently present different identities to
 different contexts, and also frequently share an identity among several
-contexts. People may also wish to present an ephemeral or anonymous identity.
+contexts. People may also wish to present an ephemeral or anonymous identity,
+which is just a set of characteristics that is too small or unstable to be useful
+for following them through time.
 
 <dfn>Recognition</dfn> is the act of realising that a given [=identity=]
 corresponds to the same [=person=] as another [=identity=] which may have been
