--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@ href="https://github.com/asankah/ephemeral-fingerprinting/blob/2395a35aac260d4d2
 attack</a>).
 
 In addition to recognition methods that can operate automatically across
-contexts, recognition can also be rendered *persistent* such that it will
+contexts, recognition can also be made *persistent* such that it will
 defeat potential mitigations like [=partitions=] or clearing one's cookies.
 This constitutes unsanctioned tracking ([[?UNSANCTIONED-TRACKING]]) and can
 take multiple forms.
