--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@ in a person's vicinity. Cross-device communication is communication
 between code on one device and code running on another device. For example, sounds or
 light emitted from one device could be detected by a microphone or light sensor on
 another device [[?SILVERPUSH]]. Cross-device communication enables cross-device
-tracking, a form of [=cross-context recognition=], but can also be used for other
+tracking, a form of [=cross-context recognition=], but it can also be used for other
 inappropriate information flows.
 
 ## Data minimization {#data-minimization}
