--- a/index.html
+++ b/index.html
@@ -979,8 +979,8 @@ particular identity on another [=site=]. Similarly, a [=user agent=] can help it
 
 ### Recognition Types {#recognition-types}
 
-There are different types of recognition that may take place, that rely on
-different methods, and that present different challenges.
+There are different types of [=recognition=] that may take place. These rely on
+different methods and present different challenges.
 
 <dfn>Cross-context recognition</dfn> is [=recognition=] between different
 [=contexts=]. It contributes to [=surveillance=], [=correlation=],
