--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@ effective means to mitigate the issue. People are unlikely to expect the
 recognition and will find it difficult to mitigate when it is automated,
 which can happen in different ways:
 
-* through the use of cross-site cookies ([[?Browser-Parties]]),
+* through the use of <a data-cite="Browser-Parties#environment-cross-site">cross-site</a> cookies,
 * by having someone navigate to a link that has been decorated with an identifier
   ([[?Nav-Tracking]]),
 * collecting the same piece of identifying information on both sites, or
