--- a/index.html
+++ b/index.html
@@ -969,9 +969,9 @@ corresponds to the same [=person=] as another [=identity=] which may have been
 observed either in another [=context=] or in the same [=context=] but at a
 different time.
 
-In order to uphold this principle, a [=user agent=] sometimes needs to *prevent*
+In order to uphold this principle, sometimes a [=user agent=] needs to *prevent*
 [=recognition=], for instance so that a [=site=] can't learn anything about its
-[=user=]'s behavior on *another* site, and sometimes needs to *support* [=recognition=],
+[=user=]'s behavior on *another* site, and sometimes the [=user agent=] needs to *support* [=recognition=],
 for instance to help its [=user=] *prove* to one [=site=] that they have a
 particular identity on another [=site=]. Similarly, a [=user agent=] can help its
 [=user=] to separate or communicate [=identity=] across *repeat* visits to the *same*
