--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@ Instead, [=user agents=] may have to make some assumptions about the borders
 between [=contexts=]. By default, [=user agents=] define a
 <dfn>machine-enforceable context</dfn> or <dfn>partition</dfn> as:
 
-* A set of [=environments=] (roughly `iframe`s (including cross-site `iframe`s),
+* A set of [=environments=] (roughly [^iframe^]s (including cross-site [^iframe^]s),
 workers, and top-level pages)
 * whose [=environment/top-level origins=] are in the [=same site=] (but see
 [[PSL-Problems]])
