--- a/index.html
+++ b/index.html
@@ -1014,6 +1014,8 @@ a different [=identity=] for different visits to a single site, but the site
 engages in [=same-site recognition=]. This harm can be accomplished through a
 variety of means detailed in [[[#recognition-methods]]].
 
+### User agent awareness of recognition {#user-agent-recognition}
+
 [=User agents=] can't, in general, determine exactly where [=context=]
 boundaries are within a site, or know how a site allows a [=person=] to
 express that they intend to change [=identities=], so the UA can't enforce
