--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@ fact that two or more visits probably came from the same [=person=].
 
 A privacy harm occurs if a [=person=] reasonably expects that they'll be using
 a different [=identity=] for different visits to a single site, but the site
-engages in [=same-site recognition=]. This harm can be accomplished through a
+[=recognizes=] them anyway. This harm can be accomplished through a
 variety of means detailed in [[[#recognition-methods]]].
 
 ### User agent awareness of recognition {#user-agent-recognition}
