--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@ contexts. People may also wish to present an ephemeral or anonymous identity,
 which is just a set of characteristics that is too small or unstable to be useful
 for following them through time.
 
-<dfn data-lt="recognize">Recognition</dfn> is the act of realising that a given [=identity=]
+<dfn data-lt="recognize|recognized">Recognition</dfn> is the act of realising that a given [=identity=]
 corresponds to the same [=person=] as another [=identity=] which may have been
 observed either in another [=context=] or in the same [=context=] but at a
 different time.
