clarify relation between categories

--- a/index.html
+++ b/index.html
@@ -1016,6 +1016,11 @@ a different [=identity=] for different visits to a single site, but the site
 [=recognizes=] them anyway. This harm can be accomplished through a
 variety of means detailed in [[[#recognition-methods]]].
 
+Note that these categories overlap: [=cross-site recognition=] is usually
+[=cross-context recognition=] (and always [=recognizes=] across [=partitions=]); and
+[=same-site recognition=] is sometimes [=cross-context recognition=] (and may or may not
+involved multiple [=partitions=]).
+
 ### User agent awareness of recognition {#user-agent-recognition}
 
 [=User agents=] can't, in general, determine exactly where [=context=]
