--- a/index.html
+++ b/index.html
@@ -1147,8 +1147,7 @@ UAs avoid this mistake.
 to identify their customers to sites that they visit. It is unfortunately
 difficult for a [=user agent=] to mitigate against [=header enrichment=].
 
-Additionally, [=cross-context recognition=] can happen directly between devices
-in a person's vicinity. Cross-device communication is communication
+<dfn>Cross-device communication</dfn> is communication
 between code on one device and code running on another device. For example, sounds or
 light emitted from one device could be detected by a microphone or light sensor on
 another device [[?SILVERPUSH]]. Cross-device communication enables cross-device
