--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@ difficult for a [=user agent=] to mitigate against [=header enrichment=].
 <dfn>Cross-device communication</dfn> is communication
 between code on one device and code running on another device. For example, sounds or
 light emitted from one device could be detected by a microphone or light sensor on
-another device [[?SILVERPUSH]]. Cross-device communication enables cross-device
+another device [[?SILVERPUSH]]. [=Cross-device communication=] enables cross-device
 tracking, a form of [=cross-context recognition=], but it can also be used for other
 inappropriate information flows.
 
